Fix tag overflow and position in project items

--- a/main/static/main/style.css
+++ b/main/static/main/style.css
@@ -377,6 +377,8 @@ a.fill-div {
 
 .project-tags {
     display: flex;
+    flex-wrap: wrap;
+    padding-inline-start: 0px;
     justify-content: flex-end;
     flex: 1 0 100%;
     gap: 10px;
